frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elizafrontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: elizafrontend
  template:
    metadata:
      labels:
        app: elizafrontend
    spec:
      containers:
      - name: frontend
        image: /elizaplannerfrontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: elizafrontend-service
spec:
  selector:
    app: elizafrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002  # Add this line to specify the NodePort
  type: NodePort
